--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -65,7 +65,7 @@
     </tr>
   </thead>
   <tbody>
-  <% @contacts.each do |contact| %>
+  <% @contact.each do |contact| %>
     <tr>
     <td> <%= contact.id %></td>
       <td><%= contact.first_name %></td>
