--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -57,10 +57,12 @@
   <thead>
     <tr>
     <th> ID </th>
-      <th>First Name</th>
-       <th>Last Name</th>
-        <th>Email</th>
-        <th>phone</th>
+    <th> Full Name</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Email</th>
+    <th>phone</th>
+    <th>Created Date</th>
 
     </tr>
   </thead>
@@ -68,10 +70,12 @@
   <% @contact.each do |contact| %>
     <tr>
     <td> <%= contact.id %></td>
+      <td><%= contact.full_name %></td>
       <td><%= contact.first_name %></td>
       <td> <%= contact.last_name %></td>
       <td> <%= contact.email %></td>
-      <td> <%= contact.phone_number %></td>
+      <td> <%= contact.jap_phone %></td>
+      <td><%= contact.friendly_time %></td>
     </tr>
     <% end %>
   </tbody>
