--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,27 +1,1 @@
-<h1>Contacts Edit Form</h1>
-<%= form_tag "/contacts/#{@contact.id}", method: :patch do%>
-<div>
-First Name
-  <input type="text" name="first_name" value='<%= @contact.first_name %>'>
-</div>
-
-<div>
-Last Name
-  <input type="text" name="last_name" value='<%= @contact.last_name %>'>
-</div>
-
-<div>
-Email
-  <input type="text" name="email" value='<%= @contact.email %>'>
-</div>
-
-<div>
-Phone Number
-  <input type="text" name="phone_number" value='<%= @contact.phone_number%>'>
-</div>
-
-<div>
-  <input type="submit" value="done" >
-</div>
-
-<% end %>
+<%= render "form", url: "/contacts/#{@contact.id}", method_var: :patch, header: "Edit Contact" %>
